<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout 
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" 
    android:background="@color/albastru"
    >
 
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cs"
        android:layout_gravity="center"
         />
    
     <TimePicker
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        />

    <CheckBox
        android:id="@+id/alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salarm" />

   

    <CheckBox
        android:id="@+id/pausec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spause"
         />

   

    <CheckBox
        android:id="@+id/stopc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sstop" />

    <RelativeLayout
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ok"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/cancel"
            android:background="@android:drawable/btn_default"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@android:drawable/btn_default"
            android:text="@string/cancel" />
    </RelativeLayout>

</LinearLayout>
</ScrollView>