<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" 
    android:background="@color/albastru"
    >
    <TextView
        android:id="@+id/activia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/activia"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/stop_activiti"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activia"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:padding="10dp" >

        <Button
            android:id="@+id/ok"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignBaseline="@+id/cancel"
            android:layout_alignBottom="@+id/cancel"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/cancel"
             android:background="@android:drawable/btn_default"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
             android:background="@android:drawable/btn_default"
            android:text="@string/cancel" />

    </RelativeLayout>
 
</RelativeLayout>