<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp" 
    android:layout_marginBottom="25dp"
     android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp">
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/albastru" 
   
    >
   

           <LinearLayout       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
         android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp" >
    

    

    <LinearLayout
        android:id="@+id/read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
         android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

       

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/read"
            android:textSize="20dp" />
        
    </LinearLayout>
    <LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:id="@+id/run"
     android:layout_marginBottom="5dp"
    android:layout_gravity="center"
    android:clickable="true"
    >

  

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run" 
        android:layout_gravity="center_vertical"
        android:textSize="20dp"/>

    </LinearLayout>
    
<LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:id="@+id/work"
     android:layout_marginBottom="5dp"
    android:layout_gravity="center"
    android:clickable="true"
    >

   

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work" 
        android:layout_gravity="center_vertical"
        android:textSize="20dp"/>

    </LinearLayout>
    
    <LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:id="@+id/otherl"
     android:layout_marginBottom="5dp"
    android:layout_gravity="center"
    android:clickable="true"
    >
    
        </LinearLayout>
        
          <Button
        android:id="@+id/other"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:text="@string/other"
        android:background="@android:drawable/btn_default"
        android:layout_gravity="center" />
    </LinearLayout>
        
 
   
  


</LinearLayout>
   </ScrollView>
