<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/albastru" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_vertical"
        android:text="@string/del"
        android:textSize="15dp" />

<TextView
    android:id="@+id/delete"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView1"
    android:layout_centerHorizontal="true"
    android:gravity="center_vertical"
    
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:textSize="15dp" />

<RelativeLayout
    android:layout_width="128dp"
    android:layout_height="wrap_content"
    android:layout_below="@+id/delete"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:gravity="center"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/ok"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/cancel"
        android:background="@android:drawable/btn_default"
        android:text="@string/ok" />

    <Button
        android:id="@+id/cancel"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@android:drawable/btn_default"
        android:text="@string/cancel" />
</RelativeLayout>

</RelativeLayout>
