<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical" >
<RelativeLayout
        android:id="@+id/linears"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
    
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="asdas"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linears"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/st"
                style="?android:attr/buttonStyleSmall"
                android:background="@android:drawable/btn_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                
                android:text="@string/start" />

            <Button
                android:id="@+id/pause"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/btn_default"
                android:text="@string/pause" />

            <Button
                android:id="@+id/sto"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/btn_default"
                android:text="@string/stop" />

            <Button
                android:id="@+id/custom"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/btn_default"
                android:text="@string/custom" />
            
              <Button
                  android:id="@+id/today"
                  style="?android:attr/buttonStyleSmall"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:background="@android:drawable/btn_default"
                  android:text="@string/history" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/linearLayout3"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/linearLayout3"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/img"
                android:clickable="true" />

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="00:00:00"
                android:textAppearance="?android:attr/textAppearanceLarge"
                 />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/category"
        style="?android:attr/buttonStyleSmall"
         android:background="@android:drawable/btn_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
       
        android:clickable="true"
        android:orientation="horizontal"
        android:text="@string/selcategory" >

        

        <TextView
            android:id="@+id/categ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selcategory"
             />
    </LinearLayout>

</RelativeLayout>
</RelativeLayout>
